add: filter endpoint for books
